Fixed text alignment

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
 #main{
     font-family: "Roboto", sans-serif;
-    align-self: center;
+    text-align: center;
 }
